--- a/school_unity/school_unity.csproj
+++ b/school_unity/school_unity.csproj
@@ -99,6 +99,9 @@
     <Compile Include="UserMenu\admin.xaml.cs">
       <DependentUpon>admin.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserMenu\Headteacher.xaml.cs">
+      <DependentUpon>Headteacher.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserMenu\teacher.xaml.cs">
       <DependentUpon>teacher.xaml</DependentUpon>
     </Compile>
@@ -139,6 +142,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserMenu\admin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserMenu\Headteacher.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
