--- a/school_unity/school_unity.csproj
+++ b/school_unity/school_unity.csproj
@@ -206,7 +206,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="unity.accdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
